--- a/themes/paper-plane.css
+++ b/themes/paper-plane.css
@@ -1,63 +1,29 @@
-/*
- +-------------------------------------------------------------------------+
- | Copyright (C) 2004-2025 The Cacti Group                                 |
- |                                                                         |
- | This program is free software; you can redistribute it and/or           |
- | modify it under the terms of the GNU General Public License             |
- | as published by the Free Software Foundation; either version 2          |
- | of the License, or (at your option) any later version.                  |
- |                                                                         |
- | This program is distributed in the hope that it will be useful,         |
- | but WITHOUT ANY WARRANTY; without even the implied warranty of          |
- | MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the           |
- | GNU General Public License for more details.                            |
- +-------------------------------------------------------------------------+
- | Cacti: The Complete RRDtool-based Graphing Solution                     |
- +-------------------------------------------------------------------------+
- | This code is designed, written, and maintained by the Cacti Group. See  |
- | about.php and/or the AUTHORS file for specific developer information.   |
- +-------------------------------------------------------------------------+
- | http://www.cacti.net/                                                   |
- +-------------------------------------------------------------------------+
-*/
-
-.grid_item {
-	background-color: #202020 !important;
-}
-
-.panel_data {
-	background-color: #202020;
-	color: white;
-	padding: 0px;
-}
-
-.panel_data td {
-	background-color: #202020;
-	color: snow;
-}
-
-.panel_data a, .panel_data a:visited {
-	color: #93CEFF;
-}
-
-.textArea {
-	background-color: snow;
-}
-
-.panel_header {
-	color: #bbf;
-}
-
-#generated {
-	color: white;
-}
-
-#main_container, #panel_container {
-	padding: 3px;
-	color: lightgrey !important;
-}
-
-.intro_glyph {
-	color: lightgrey !important;
-	vertical-align: middle;
+/* Neighbor theme: paper-plane */
+:root {
+	--neighbor-panel-bg: #202020;
+	--neighbor-panel-border: #4d4d4d;
+	--neighbor-title-bg: linear-gradient(#2f2f2f, #1a1a1a);
+	--neighbor-title-color: #e9e9e9;
+	--neighbor-title-border: #4d4d4d;
+	--neighbor-control-bg: #252525;
+	--neighbor-btn-bg: #2e2e2e;
+	--neighbor-btn-color: #f2f2f2;
+	--neighbor-btn-border: #555;
+	--neighbor-primary-bg: linear-gradient(#3f6d24, #214613);
+	--neighbor-primary-color: #fff;
+	--neighbor-primary-border: #214613;
+	--neighbor-tab-bg: #2a2a2a;
+	--neighbor-tab-color: #ddd;
+	--neighbor-tab-border: #4c4c4c;
+	--neighbor-tab-active-bg: #2d6cdf;
+	--neighbor-tab-active-color: #fff;
+	--neighbor-tab-active-border: #2d6cdf;
+	--neighbor-table-wrap-border: #4a4a4a;
+	--neighbor-table-head-bg: #2c2c2c;
+	--neighbor-table-head-color: #ececec;
+	--neighbor-table-head-border: #4a4a4a;
+	--neighbor-table-cell-color: #e2e2e2;
+	--neighbor-table-row-border: #3f3f3f;
+	--neighbor-muted: 0.9;
+	--neighbor-error: #ff9f9f;
 }
